Fix Focus not being visible on the radio card

--- a/static/sass/_pattern_card.scss
+++ b/static/sass/_pattern_card.scss
@@ -183,6 +183,10 @@
       border: 0.1875rem solid #2e96ff;
       outline: none;
     }
+
+    &.is-focused {
+      box-shadow: 0px 0px 0px 1px #fff, 0px 0px 0 3px #2e96ff;
+    }
   }
 
   .p-card--radio--version {
